tests/custom/STARIS_2022/operation-type-errors/max-type-error-02/stderr.expected
Error:
    Parser error in file: max-type-error.essence Error is:
ValidatorError max-type-error.essence:2:20:
  |
2 | such that b = (max([false, true, false, true]) = true)
  |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected:"Domain of int-like or matrix of int-like"
	Got: matrix indexed by [int] of bool

